refactor: 키워드TOP5, 감정분석텍스, 보호자 조언 AI 적용